--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,14 @@
     align-items: center;
     display: none;
 }
+.buy button:nth-child(1){
+    background-color: transparent;
+    border: 0;
+    color: red;
+    font-weight: 900;
+    padding: 0;
+    margin-bottom: 3vh;
+}
 .buy form{
     width: 100%;
     height: 100%;
@@ -107,14 +115,38 @@
 }
 .rez{
     display: flex;
-    justify-content: center;
-    align-items: center; ;
+    justify-content: flex-end;
+    align-items: center;
     color: White;
     
+}
+.advl p{
+    background-color: rgba(58, 110, 72);
+    width: 95%;
+    margin:15px;
+    padding:15px;
+    font-size: 252%;
+    border-radius: 5px;
+}
+.advr p{
+    background-color: rgba(58, 110, 72);
+    width: 95%;
+    margin:15px;
+    padding:15px;
+    font-size: 252%;
+    border-radius: 5px;
+
+}
+.advr{
+    transform: rotate(90deg);
+}
+.advl{
+    transform: rotate(90deg);
 }
 
 .rez input{
     border-radius: 5px;
+    background-color: rgba(162, 217, 160);
 }
 
 .rez label{
@@ -122,6 +154,7 @@
 }
 
 .rez textarea{
+    background-color: rgba(162, 217, 160);
     font-weight: 50%;
     border-radius: 7px;
     text-align: left;
@@ -144,11 +177,11 @@
 .rez button{
     height: 5%;
     width: 15%;
-    background-color: white;
-    border: solid 1px black;
+    border:0k;
     border-radius: 5px;
     align-self: center;
-    margin: 5px;
+    margin: px;
+    background-color: rgba(162, 217, 160);
 }
 
 header{
@@ -156,7 +189,6 @@ header{
     width: 100%;
     background-color: rgb(94, 132, 92);
     height: 10vh;
-    margin-bottom: 1vw;
     z-index: 100;
 }
 nav ul li a{
@@ -185,14 +217,13 @@ nav ul li{
 .phantomHeader{
     width: 100%;
     height: 10vh;
-    margin-bottom: 1vh;
+    margin-bottom: 5vh;
 }
 form > .cardInfo{
     display: none;
 }
 body{
     position: relative;
-    background-color: rgb(203, 239, 202);
     margin: 0;  
 }
 footer{
@@ -274,4 +305,20 @@ textarea{
 .main h2{
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
+}
+.payment{
+    display: none;
+}
+.order{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1vw;
+}
+.order button:nth-child(1){
+    grid-column: span 2;
+    text-align: left;
+}
+.order input{
+    width: 100%;
+    height: 100%;
 }
